@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-6.2,v 1.1.2.242 2016/04/15 19:36:28 snj Exp $
+# $NetBSD: CHANGES-6.2,v 1.1.2.243 2016/04/15 20:19:24 mrg Exp $
 
 A complete list of changes from the 6.1 release until the 6.2 release:
 
@@ -13445,3 +13445,7 @@ libexec/httpd/tilde-luzah-bozo.c                up to 1.14
 	o -C option supports now CGI scripts only
 	[mrg, ticket #1377]
 
+libexec/httpd/cgi-bozo.c                        1.34
+
+	Fix the build: use %zu instead of %lu for size_t.
+	[mrg, ticket #1377]
